# white-list-synapse-module

./: README.md  docker-compose.yml  setup.cfg  tox.ini
.github/workflows/: lint.yml  test.yml
docker-test-config/: realm-export-local.json
docker-test-config/mx-conf/: homeserver.yaml
tests/: __init__.py  test_white_list_module.py
white_list_module/: __init__.py
