[metadata]
name = eimis_white_list_module
description = "A synapse module used by EIMIS to filter users"
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.1

classifiers =
  License :: OSI Approved :: Apache Software License

[options]
python_requires = >= 3.9
install_requires =
  attrs


[options.extras_require]
dev =
  # for tests
  matrix-synapse == 1.121.1
  tox == 4.23.2 
  aiounittest == 1.4.2
  # for type checking
  mypy == 1.14.1
  # for linting
  black == 24.10.0
  flake8 == 7.1.1
  isort == 5.13.2


[flake8]
# see https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# for error codes. The ones we ignore are:
#  W503: line break before binary operator
#  W504: line break after binary operator
#  E203: whitespace before ':' (which is contrary to pep8?)
#  E501: Line too long (black enforces this for us)
# (this is a subset of those ignored in Synapse)
ignore=W503,W504,E203,E501